--- a/about-us.html
+++ b/about-us.html
@@ -115,18 +115,18 @@
                                         <div
                                             class="absolute -top-8 -left-4 lg:py-3 lg:px-10 py-3 px-7 font-bold bg-gradient-to-l from-[#CB122D] to-[#650916] text-white lg:-skew-x-[6deg] skew-x-[6deg]">
                                             <span
-                                                class="lg:skew-x-[20deg] skew-x-[10deg] block 2xl:text-[2.5rem] xl:text-3xl lg:text-2xl text-xl 2xl:!leading-[3.063rem]">2022</span>
+                                                class="lg:skew-x-[20deg] skew-x-[10deg] block 2xl:text-[1.5rem] xl:text-2xl lg:text-2xl text-xl 2xl:!leading-[3.063rem]">2022</span>
                                         </div>
 
-                                        <div class="flex flex-col items-start skew-x-[18deg] w-full">
+                                        <div class="flex flex-col items-start skew-x-[18deg] w-full pt-6">
                                             <div class="md:pl-14 pl-10 max-w-[90%]">
                                                 <img fetchpriority="low" loading="lazy" src="img/image-42.webp"
-                                                    class="lg:h-44 w-auto h-32 object-contain object-center aspect-square"
+                                                    class="lg:h-[7.938rem] lg:w-[13.899rem] h-[5.938rem] w-[9.938rem] object-contain object-center aspect-square"
                                                     alt="Four Petromin Express stations launched in Chennai – OMR, Central, T. Nagar, and Whites Road"
                                                     title="Four Petromin Express stations launched in Chennai – OMR, Central, T. Nagar, and Whites Road">
 
                                                 <div
-                                                    class="2xl:text-2xl xl:text-xl lg:text-xl text-base font-medium text-black  mx-auto ">
+                                                    class="2xl:text-xl xl:text-xl lg:text-lg text-base text-balance font-medium text-black  mx-auto pt-6">
                                                     Four Petromin Express stations launched in Chennai – OMR, Central,
                                                     T. Nagar, and Whites Road
                                                 </div>
@@ -142,17 +142,18 @@
                                         <div
                                             class="absolute -top-8 -left-4 lg:py-3 lg:px-10 py-3 px-7 font-bold bg-gradient-to-l from-[#CB122D] to-[#650916] text-white lg:-skew-x-[6deg] skew-x-[6deg]">
                                             <span
-                                                class="lg:skew-x-[20deg] skew-x-[10deg] block 2xl:text-[2.5rem] xl:text-3xl lg:text-2xl text-xl 2xl:!leading-[3.063rem]">August
+                                                class="lg:skew-x-[20deg] skew-x-[10deg] block 2xl:text-[1.5rem] xl:text-2xl lg:text-2xl text-xl 2xl:!leading-[3.063rem]">August
                                                 2023 </span>
                                         </div>
-                                        <div class="flex flex-col items-start skew-x-[18deg] w-full">
+                                        <div class="flex flex-col items-start skew-x-[18deg] w-full pt-6">
                                             <div class="md:pl-14 pl-10 max-w-[90%]">
                                                 <img fetchpriority="low" loading="lazy" src="img/image-2.webp"
-                                                    class="lg:h-44 w-auto h-32 object-contain object-center aspect-square"
+                                                    class="lg:h-[7.938rem] lg:w-[13.899rem] h-[5.938rem] w-[9.938rem] object-cover object-center aspect-[89/51]"
+                                                    width="178" height="102"
                                                     alt="Petromin Express stations launched at Kattankulathur, Sholinganallur, and Tambaram"
                                                     title="Petromin Express stations launched at Kattankulathur, Sholinganallur, and Tambaram">
                                                 <div
-                                                    class="2xl:text-2xl xl:text-xl lg:text-xl text-base font-medium text-black  mx-auto ">
+                                                    class="2xl:text-xl xl:text-xl lg:text-lg text-base text-balance font-medium text-black  mx-auto pt-6">
                                                     Petromin Express stations launched at Kattankulathur,
                                                     Sholinganallur, and Tambaram
                                                 </div>
@@ -167,20 +168,21 @@
                                         <div
                                             class="absolute -top-8 -left-4 lg:py-3 lg:px-10 py-3 px-7 font-bold bg-gradient-to-l from-[#CB122D] to-[#650916] text-white lg:-skew-x-[6deg] skew-x-[6deg]">
                                             <span
-                                                class="lg:skew-x-[20deg] skew-x-[10deg] block 2xl:text-[2.5rem] xl:text-3xl lg:text-2xl text-xl 2xl:!leading-[3.063rem]">September
+                                                class="lg:skew-x-[20deg] skew-x-[10deg] block 2xl:text-[1.5rem] xl:text-2xl lg:text-2xl text-xl 2xl:!leading-[3.063rem]">September
                                                 2023 </span>
                                         </div>
-                                        <div class="flex flex-col items-start skew-x-[18deg] w-full">
+                                        <div class="flex flex-col items-start skew-x-[18deg] w-full pt-6">
                                             <div class="md:pl-14 pl-10 max-w-[90%]">
 
 
                                                 <img fetchpriority="low" loading="lazy" src="img/image-42.webp"
-                                                    class="lg:h-44 w-auto h-32 object-contain object-center aspect-square"
+                                                    class="lg:h-[7.938rem] lg:w-[13.899rem] h-[5.938rem] w-[9.938rem] object-cover object-center aspect-[89/51]"
+                                                    width="178" height="102"
                                                     alt="HP Petromin Express stations launched in Avadi, Kattupakkam, Kilpauk, and Pallikaranai"
                                                     title="HP Petromin Express stations launched in Avadi, Kattupakkam, Kilpauk, and Pallikaranai">
 
                                                 <div
-                                                    class="2xl:text-2xl xl:text-xl lg:text-xl text-base font-medium text-black  mx-auto ">
+                                                    class="2xl:text-xl xl:text-xl lg:text-lg text-base text-balance font-medium text-black  mx-auto pt-6">
                                                     HP Petromin Express stations launched in Avadi, Kattupakkam,
                                                     Kilpauk, and Pallikaranai
                                                 </div>
@@ -194,18 +196,19 @@
                                         <div
                                             class="absolute -top-8 -left-4 lg:py-3 lg:px-10 py-3 px-7 font-bold bg-gradient-to-l from-[#CB122D] to-[#650916] text-white lg:-skew-x-[6deg] skew-x-[6deg]">
                                             <span
-                                                class="lg:skew-x-[20deg] skew-x-[10deg] block 2xl:text-[2.5rem] xl:text-3xl lg:text-2xl text-xl 2xl:!leading-[3.063rem]">October
+                                                class="lg:skew-x-[20deg] skew-x-[10deg] block 2xl:text-[1.5rem] xl:text-2xl lg:text-2xl text-xl 2xl:!leading-[3.063rem]">October
                                                 2023 </span>
                                         </div>
-                                        <div class="flex flex-col items-start skew-x-[18deg] w-full">
+                                        <div class="flex flex-col items-start skew-x-[18deg] w-full pt-6">
                                             <div class="md:pl-14 pl-10 max-w-[90%]">
                                                 <img fetchpriority="low" loading="lazy" src="img/image-2.webp"
-                                                    class="lg:h-44 w-auto h-32 object-contain object-center aspect-square"
+                                                    class="lg:h-[7.938rem] lg:w-[13.899rem] h-[5.938rem] w-[9.938rem] object-cover object-center aspect-[89/51]"
+                                                    width="178" height="102"
                                                     alt="First HP Petromin Express station launched in Bangalore – Peenya"
                                                     title="First HP Petromin Express station launched in Bangalore – Peenya">
 
                                                 <div
-                                                    class="2xl:text-2xl xl:text-xl lg:text-xl text-base font-medium text-black  mx-auto ">
+                                                    class="2xl:text-xl xl:text-xl lg:text-lg text-base text-balance font-medium text-black  mx-auto pt-6">
                                                     First HP Petromin Express station launched in Bangalore – Peenya
                                                 </div>
                                             </div>
@@ -218,17 +221,18 @@
                                         <div
                                             class="absolute -top-8 -left-4 lg:py-3 lg:px-10 py-3 px-7 font-bold bg-gradient-to-l from-[#CB122D] to-[#650916] text-white lg:-skew-x-[6deg] skew-x-[6deg]">
                                             <span
-                                                class="lg:skew-x-[20deg] skew-x-[10deg] block 2xl:text-[2.5rem] xl:text-3xl lg:text-2xl text-xl 2xl:!leading-[3.063rem]">November
+                                                class="lg:skew-x-[20deg] skew-x-[10deg] block 2xl:text-[1.5rem] xl:text-2xl lg:text-2xl text-xl 2xl:!leading-[3.063rem]">November
                                                 2023 </span>
                                         </div>
-                                        <div class="flex flex-col items-start skew-x-[18deg] w-full">
+                                        <div class="flex flex-col items-start skew-x-[18deg] w-full pt-6">
                                             <div class="md:pl-14 pl-10 max-w-[90%]">
                                                 <img fetchpriority="low" loading="lazy" src="img/image-42.webp"
-                                                    class="lg:h-44 w-auto h-32 object-contain object-center aspect-square"
+                                                    class="lg:h-[7.938rem] lg:w-[13.899rem] h-[5.938rem] w-[9.938rem] object-cover object-center aspect-[89/51]"
+                                                    width="178" height="102"
                                                     alt="Six HP Petromin Express stations launched across Bangalore"
                                                     title="Six HP Petromin Express stations launched across Bangalore">
                                                 <div
-                                                    class="2xl:text-2xl xl:text-xl lg:text-xl text-base font-medium text-black  mx-auto ">
+                                                    class="2xl:text-xl xl:text-xl lg:text-lg text-base text-balance font-medium text-black  mx-auto pt-6">
                                                     Six HP Petromin Express stations launched across Bangalore
                                                 </div>
                                             </div>
@@ -241,18 +245,19 @@
                                         <div
                                             class="absolute -top-8 -left-4 lg:py-3 lg:px-10 py-3 px-7 font-bold bg-gradient-to-l from-[#CB122D] to-[#650916] text-white lg:-skew-x-[6deg] skew-x-[6deg]">
                                             <span
-                                                class="lg:skew-x-[20deg] skew-x-[10deg] block 2xl:text-[2.5rem] xl:text-3xl lg:text-2xl text-xl 2xl:!leading-[3.063rem]">December
+                                                class="lg:skew-x-[20deg] skew-x-[10deg] block 2xl:text-[1.5rem] xl:text-2xl lg:text-2xl text-xl 2xl:!leading-[3.063rem]">December
                                                 2023 </span>
                                         </div>
-                                        <div class="flex flex-col items-start skew-x-[18deg] w-full">
+                                        <div class="flex flex-col items-start skew-x-[18deg] w-full pt-6">
                                             <div class="md:pl-14 pl-10 max-w-[90%]">
                                                 <img fetchpriority="low" loading="lazy" src="img/image-2.webp"
-                                                    class="lg:h-44 w-auto h-32 object-contain object-center aspect-square"
+                                                    class="lg:h-[7.938rem] lg:w-[13.899rem] h-[5.938rem] w-[9.938rem] object-cover object-center aspect-[89/51]"
+                                                    width="178" height="102"
                                                     alt="HP Petromin Express station launched in Madhavaram, Chennai"
                                                     title="HP Petromin Express station launched in Madhavaram, Chennai">
 
                                                 <div
-                                                    class="2xl:text-2xl xl:text-xl lg:text-xl text-base font-medium text-black  mx-auto ">
+                                                    class="2xl:text-xl xl:text-xl lg:text-lg text-base text-balance font-medium text-black  mx-auto pt-6">
                                                     HP Petromin Express station launched in Madhavaram, Chennai
                                                 </div>
                                             </div>
@@ -265,17 +270,18 @@
                                         <div
                                             class="absolute -top-8 -left-4 lg:py-3 lg:px-10 py-3 px-7 font-bold bg-gradient-to-l from-[#CB122D] to-[#650916] text-white lg:-skew-x-[6deg] skew-x-[6deg]">
                                             <span
-                                                class="lg:skew-x-[20deg] skew-x-[10deg] block 2xl:text-[2.5rem] xl:text-3xl lg:text-2xl text-xl 2xl:!leading-[3.063rem]">January
+                                                class="lg:skew-x-[20deg] skew-x-[10deg] block 2xl:text-[1.5rem] xl:text-2xl lg:text-2xl text-xl 2xl:!leading-[3.063rem]">January
                                                 2024 </span>
                                         </div>
-                                        <div class="flex flex-col items-start skew-x-[18deg] w-full">
+                                        <div class="flex flex-col items-start skew-x-[18deg] w-full pt-6">
                                             <div class="md:pl-14 pl-10 max-w-[90%]">
                                                 <img fetchpriority="low" loading="lazy" src="img/image-42.webp"
-                                                    class="lg:h-44 w-auto h-32 object-contain object-center aspect-square"
+                                                    class="lg:h-[7.938rem] lg:w-[13.899rem] h-[5.938rem] w-[9.938rem] object-cover object-center aspect-[89/51]"
+                                                    width="178" height="102"
                                                     alt="HP Petromin Express station launched in Kasturba Road, Bangalore"
                                                     title="HP Petromin Express station launched in Kasturba Road, Bangalore">
                                                 <div
-                                                    class="2xl:text-2xl xl:text-xl lg:text-xl text-base font-medium text-black  mx-auto ">
+                                                    class="2xl:text-xl xl:text-xl lg:text-lg text-base text-balance font-medium text-black  mx-auto pt-6">
                                                     HP Petromin Express station launched in Kasturba Road, Bangalore
                                                 </div>
                                             </div>
@@ -289,19 +295,19 @@
                                         <div
                                             class="absolute -top-8 -left-4 lg:py-3 lg:px-10 py-3 px-7 font-bold bg-gradient-to-l from-[#CB122D] to-[#650916] text-white lg:-skew-x-[6deg] skew-x-[6deg]">
                                             <span
-                                                class="lg:skew-x-[20deg] skew-x-[10deg] block 2xl:text-[2.5rem] xl:text-3xl lg:text-2xl text-xl 2xl:!leading-[3.063rem]">October
+                                                class="lg:skew-x-[20deg] skew-x-[10deg] block 2xl:text-[1.5rem] xl:text-2xl lg:text-2xl text-xl 2xl:!leading-[3.063rem]">October
                                                 2025</span>
                                         </div>
-                                        <div class="flex flex-col items-start skew-x-[18deg] w-full">
+                                        <div class="flex flex-col items-start skew-x-[18deg] w-full pt-6">
                                             <div class="md:pl-14 pl-10 max-w-[90%]">
                                                 <img fetchpriority="low" loading="lazy" src="img/image-2.webp"
-                                                    class="lg:h-44 w-auto h-32 object-contain object-center aspect-square"
-                                                    alt="Two new Petromin Express stations launched in Kovur and Pallavaram
+                                                    class="lg:h-[7.938rem] lg:w-[13.899rem] h-[5.938rem] w-[9.938rem] object-cover object-center aspect-[89/51]"
+                                                    width="178" height="102" alt="Two new Petromin Express stations launched in Kovur and Pallavaram
                                 Arabia" title="Two new Petromin Express stations launched in Kovur and Pallavaram
                                 Arabia">
 
                                                 <div
-                                                    class="2xl:text-2xl xl:text-xl lg:text-xl text-base font-medium text-black  mx-auto ">
+                                                    class="2xl:text-xl xl:text-xl lg:text-lg text-base text-balance font-medium text-black  mx-auto pt-6">
                                                     Two new Petromin Express stations launched in Kovur and Pallavaram
                                                 </div>
                                             </div>
