--- a/blog-item.html
+++ b/blog-item.html
@@ -54,18 +54,19 @@
                         </div>
                     </div>
                     <div class="flex flex-wrap md:border-0 border-b border-[#E0E5EB] md:pb-0 pb-8 gap-2.5 pt-2.5 ">
-                        <button class="bg-[#FF8300] text-white text-xs md:text-sm font-semibold px-3 py-2 md:p-2.5">Car
-                            Care & Maintenance</button>
-                        <button
+                        <a href=""
+                            class="bg-[#FF8300] text-white text-xs md:text-sm font-semibold px-3 py-2 md:p-2.5">Car
+                            Care & Maintenance</a>
+                        <a href=""
                             class="bg-[#FF8300] text-white text-xs md:text-sm font-semibold px-3 py-2 md:p-2.5">Service
                             &
-                            Repairs</button>
-                        <button
+                            Repairs</a>
+                        <a href=""
                             class="bg-[#FF8300] text-white text-xs md:text-sm font-semibold px-3 py-2 md:p-2.5">Industry
-                            Insights</button>
-                        <button
+                            Insights</a>
+                        <a href=""
                             class="bg-[#FF8300] text-white text-xs md:text-sm font-semibold px-3 py-2 md:p-2.5">Petromin
-                            Stories</button>
+                            Stories</a>
                     </div>
                 </div>
                 <div class="md:h-[35.188rem] h-[18.75rem] overflow-hidden">
