--- a/blog.html
+++ b/blog.html
@@ -25,7 +25,7 @@
                             class="size-full object-cover" alt="Petromin Express, on the go."
                             title="Petromin Express, on the go.">
 
-                        <div class="view w-full absolute lg:bottom-56 md:bottom-56 bottom-20 left-0">
+                        <div class="view w-full absolute lg:bottom-56 md:bottom-56 bottom-20 left-0 z-30">
                             <div class="flex flex-col md:gap-y-8 gap-y-6">
                                 <h1
                                     class="block xl:text-5xl lg:text-4xl text-3xl  text-balance text-white font-semibold !leading-tight md:drop-shadow-[0_4px_6px_rgba(0,0,0,0.7)]">
@@ -34,42 +34,46 @@
                                     in India
                                 </h1>
 
-                                <ul class="flex flex-wrap md:gap-5 gap-2 items-center">
+                                <ul class="flex flex-wrap md:gap-5 gap-2 items-center position-relative z-30">
                                     <li>
-                                        <div class="w-auto md:px-6 px-4 flex space-x-3 items-center  bg-[#FF8300] h-8">
+                                        <a href="#"
+                                            class="cursor-pointer w-auto md:px-6 px-4 flex space-x-3 items-center  bg-[#FF8300] h-8">
                                             <span
                                                 class="flex items-center gap-2 md:text-base text-sm font-semibold text-white">
                                                 Car Care & Maintenance
                                             </span>
 
-                                        </div>
+                                        </a>
                                     </li>
                                     <li>
-                                        <div class="w-auto md:px-6 px-4 flex space-x-3 items-center  bg-[#FF8300] h-8">
+                                        <a href="#"
+                                            class="cursor-pointer w-auto md:px-6 px-4 flex space-x-3 items-center  bg-[#FF8300] h-8">
                                             <span
                                                 class="flex items-center gap-2 md:text-base text-sm font-semibold text-white">
                                                 Service & Repairs
                                             </span>
 
-                                        </div>
+                                        </a>
                                     </li>
                                     <li>
-                                        <div class="w-auto md:px-6 px-4 flex space-x-3 items-center  bg-[#FF8300] h-8">
+                                        <a href="#"
+                                            class="cursor-pointer w-auto md:px-6 px-4 flex space-x-3 items-center  bg-[#FF8300] h-8">
                                             <span
                                                 class="flex items-center gap-2 md:text-base text-sm font-semibold text-white">
                                                 Industry Insights
                                             </span>
 
-                                        </div>
+                                        </a>
                                     </li>
                                     <li>
-                                        <div class="w-auto md:px-6 px-4 flex space-x-3 items-center  bg-[#FF8300] h-8">
+                                        <a href="#"
+                                            class="cursor-pointer w-auto md:px-6 px-4 flex space-x-3 items-center  bg-[#FF8300] h-8">
                                             <span
                                                 class="flex items-center gap-2 md:text-base text-sm font-semibold text-white">
                                                 Petromin Stories
                                             </span>
 
-                                        </div>
+                                        </a>
                                     </li>
                                 </ul>
 
@@ -94,7 +98,7 @@
                             class="size-full object-cover" alt="Petromin Express, on the go."
                             title="Petromin Express, on the go.">
 
-                        <div class="view w-full absolute lg:bottom-56 md:bottom-56 bottom-20 left-0">
+                        <div class="view w-full absolute lg:bottom-56 md:bottom-56 bottom-20 left-0 z-30">
                             <div class="flex flex-col md:gap-y-8 gap-y-6">
                                 <h1
                                     class="block xl:text-5xl lg:text-4xl text-3xl  text-balance text-white font-semibold !leading-tight md:drop-shadow-[0_4px_6px_rgba(0,0,0,0.7)]">
@@ -103,42 +107,46 @@
                                     in India
                                 </h1>
 
-                                <ul class="flex flex-wrap md:gap-5 gap-2 items-center">
+                                <ul class="flex flex-wrap md:gap-5 gap-2 items-center position-relative z-30">
                                     <li>
-                                        <div class="w-auto md:px-6 px-4 flex space-x-3 items-center  bg-[#FF8300] h-8">
+                                        <a href="#"
+                                            class="cursor-pointer w-auto md:px-6 px-4 flex space-x-3 items-center  bg-[#FF8300] h-8">
                                             <span
                                                 class="flex items-center gap-2 md:text-base text-sm font-semibold text-white">
                                                 Car Care & Maintenance
                                             </span>
 
-                                        </div>
+                                        </a>
                                     </li>
                                     <li>
-                                        <div class="w-auto md:px-6 px-4 flex space-x-3 items-center  bg-[#FF8300] h-8">
+                                        <a href="#"
+                                            class="cursor-pointer w-auto md:px-6 px-4 flex space-x-3 items-center  bg-[#FF8300] h-8">
                                             <span
                                                 class="flex items-center gap-2 md:text-base text-sm font-semibold text-white">
                                                 Service & Repairs
                                             </span>
 
-                                        </div>
+                                        </a>
                                     </li>
                                     <li>
-                                        <div class="w-auto md:px-6 px-4 flex space-x-3 items-center  bg-[#FF8300] h-8">
+                                        <a href="#"
+                                            class="cursor-pointer w-auto md:px-6 px-4 flex space-x-3 items-center  bg-[#FF8300] h-8">
                                             <span
                                                 class="flex items-center gap-2 md:text-base text-sm font-semibold text-white">
                                                 Industry Insights
                                             </span>
 
-                                        </div>
+                                        </a>
                                     </li>
                                     <li>
-                                        <div class="w-auto md:px-6 px-4 flex space-x-3 items-center  bg-[#FF8300] h-8">
+                                        <a href="#"
+                                            class="cursor-pointer w-auto md:px-6 px-4 flex space-x-3 items-center  bg-[#FF8300] h-8">
                                             <span
                                                 class="flex items-center gap-2 md:text-base text-sm font-semibold text-white">
                                                 Petromin Stories
                                             </span>
 
-                                        </div>
+                                        </a>
                                     </li>
                                 </ul>
 
@@ -161,9 +169,9 @@
                 </div>
             </div>
             <div
-                class="view absolute h-full z-10 inset-0 w-full md:flex hidden justify-center items-center translate-y-[-6rem]">
+                class="view absolute h-full z-10 inset-0 w-full md:flex hidden justify-center items-center translate-y-[-6rem] pointer-events-none">
                 <div class="flex w-full items-center justify-between duration-150 ease-in-out">
-                    <div class="swiper-prev cursor-pointer">
+                    <div class="swiper-prev cursor-pointer pointer-events-auto">
                         <span>
                             <svg class="md:size-10 size-6" xmlns="http://www.w3.org/2000/svg" width="27" height="41"
                                 viewBox="0 0 27 41" fill="none">
@@ -173,7 +181,7 @@
                             </svg>
                         </span>
                     </div>
-                    <div class="swiper-next cursor-pointer">
+                    <div class="swiper-next cursor-pointer pointer-events-auto">
                         <span>
                             <svg class="md:size-10 size-6" xmlns="http://www.w3.org/2000/svg" width="26" height="41"
                                 viewBox="0 0 26 41" fill="none">
@@ -185,6 +193,7 @@
                     </div>
                 </div>
             </div>
+
         </div>
     </section>
 
@@ -192,15 +201,15 @@
         <div class="view flex flex-col gap-y-10">
             <div class="grid md:grid-cols-3 grid-cols-1 gap-6">
                 <div class="relative w-full flex flex-col md:gap-y-4 gap-y-3 group">
-                    <div class="w-full relative overflow-hidden duration-300">
+                    <a href="#" class="w-full relative overflow-hidden duration-300">
                         <img fetchpriority="low" loading="lazy" src="img/media_mention_img.webp"
                             class="size-full group-hover:lg:scale-125 duration-300" alt="Petromin Express Revolutionizes
 Car Care Industry" title="Petromin Express Revolutionizes
 Car Care Industry">
-                    </div>
+                    </a>
                     <div class="text-[#637083] font-normal lg:text-base text-sm">Author • August 20, 2025 • 2 Min Read
                     </div>
-                    <div class="flex gap-2 items-baseline">
+                    <a href="#" class="flex gap-2 items-baseline">
                         <h2
                             class="lg:text-xl md:text-lg text-base font-semibold text-[#121212] group-hover:lg:text-[#CB122D] duration-300">
                             Why Petromin Express uses only genuine parts</h2>
@@ -213,31 +222,35 @@ Car Care Industry">
                                     fill="currentColor" />
                             </svg>
                         </span>
-                    </div>
+                    </a>
                     <p class="text-[#637083]  md:text-base text-sm font-normal">Ever noticed how your car’s
                         performance declines more quickly when you opt
                         for cheaper parts?
                     </p>
                     <ul class="flex flex-wrap w-full items-center gap-3 pt-3 md:pb-0 pb-4">
-                        <li class="bg-[#FEF3E8] text-[#FF8300] p-3 font-medium md:text-base text-sm"> Car Care &
-                            Maintenance</li>
-                        <li class="bg-[#FEF3E8] text-[#FF8300] p-3 font-medium md:text-base text-sm">Repairs & Services
+                        <li class="bg-[#FEF3E8] text-[#FF8300] p-3 font-medium md:text-base text-sm">
+                            <a href="#">Car Care &
+                                Maintenance</a>
                         </li>
-                        <li class="bg-[#FEF3E8] text-[#FF8300] p-3 font-medium md:text-base text-sm"> Industry Insights
+                        <li class="bg-[#FEF3E8] text-[#FF8300] p-3 font-medium md:text-base text-sm">
+                            <a href="#">Repairs & Services</a>
+                        </li>
+                        <li class="bg-[#FEF3E8] text-[#FF8300] p-3 font-medium md:text-base text-sm">
+                            <a href="#">Industry Insights</a>
                         </li>
                     </ul>
-                    <a href="#" aria-label="" class="absolute inset-0"></a>
+
                 </div>
                 <div class="relative w-full flex flex-col md:gap-y-4 gap-y-3 group">
-                    <div class="w-full relative overflow-hidden duration-300">
+                    <a href="#" class="w-full relative overflow-hidden duration-300">
                         <img fetchpriority="low" loading="lazy" src="img/media_mention_img.webp"
                             class="size-full group-hover:lg:scale-125 duration-300" alt="Petromin Express Revolutionizes
 Car Care Industry" title="Petromin Express Revolutionizes
 Car Care Industry">
-                    </div>
+                    </a>
                     <div class="text-[#637083] font-normal lg:text-base text-sm">Author • August 20, 2025 • 2 Min Read
                     </div>
-                    <div class="flex gap-2 items-baseline">
+                    <a href="#" class="flex gap-2 items-baseline">
                         <h2
                             class="lg:text-xl md:text-lg text-base font-semibold text-[#121212] group-hover:lg:text-[#CB122D] duration-300">
                             Why Petromin Express uses only genuine parts</h2>
@@ -250,31 +263,35 @@ Car Care Industry">
                                     fill="currentColor" />
                             </svg>
                         </span>
-                    </div>
+                    </a>
                     <p class="text-[#637083]  md:text-base text-sm font-normal">Ever noticed how your car’s
                         performance declines more quickly when you opt
                         for cheaper parts?
                     </p>
                     <ul class="flex flex-wrap w-full items-center gap-3 pt-3 md:pb-0 pb-4">
-                        <li class="bg-[#FEF3E8] text-[#FF8300] p-3 font-medium md:text-base text-sm"> Car Care &
-                            Maintenance</li>
-                        <li class="bg-[#FEF3E8] text-[#FF8300] p-3 font-medium md:text-base text-sm">Repairs & Services
+                        <li class="bg-[#FEF3E8] text-[#FF8300] p-3 font-medium md:text-base text-sm">
+                            <a href="#">Car Care &
+                                Maintenance</a>
                         </li>
-                        <li class="bg-[#FEF3E8] text-[#FF8300] p-3 font-medium md:text-base text-sm"> Industry Insights
+                        <li class="bg-[#FEF3E8] text-[#FF8300] p-3 font-medium md:text-base text-sm">
+                            <a href="#">Repairs & Services</a>
+                        </li>
+                        <li class="bg-[#FEF3E8] text-[#FF8300] p-3 font-medium md:text-base text-sm">
+                            <a href="#">Industry Insights</a>
                         </li>
                     </ul>
-                    <a href="#" aria-label="" class="absolute inset-0"></a>
+
                 </div>
                 <div class="relative w-full flex flex-col md:gap-y-4 gap-y-3 group">
-                    <div class="w-full relative overflow-hidden duration-300">
+                    <a href="#" class="w-full relative overflow-hidden duration-300">
                         <img fetchpriority="low" loading="lazy" src="img/media_mention_img.webp"
                             class="size-full group-hover:lg:scale-125 duration-300" alt="Petromin Express Revolutionizes
 Car Care Industry" title="Petromin Express Revolutionizes
 Car Care Industry">
-                    </div>
+                    </a>
                     <div class="text-[#637083] font-normal lg:text-base text-sm">Author • August 20, 2025 • 2 Min Read
                     </div>
-                    <div class="flex gap-2 items-baseline">
+                    <a href="#" class="flex gap-2 items-baseline">
                         <h2
                             class="lg:text-xl md:text-lg text-base font-semibold text-[#121212] group-hover:lg:text-[#CB122D] duration-300">
                             Why Petromin Express uses only genuine parts</h2>
@@ -287,20 +304,24 @@ Car Care Industry">
                                     fill="currentColor" />
                             </svg>
                         </span>
-                    </div>
+                    </a>
                     <p class="text-[#637083]  md:text-base text-sm font-normal">Ever noticed how your car’s
                         performance declines more quickly when you opt
                         for cheaper parts?
                     </p>
                     <ul class="flex flex-wrap w-full items-center gap-3 pt-3 md:pb-0 pb-4">
-                        <li class="bg-[#FEF3E8] text-[#FF8300] p-3 font-medium md:text-base text-sm"> Car Care &
-                            Maintenance</li>
-                        <li class="bg-[#FEF3E8] text-[#FF8300] p-3 font-medium md:text-base text-sm">Repairs & Services
+                        <li class="bg-[#FEF3E8] text-[#FF8300] p-3 font-medium md:text-base text-sm">
+                            <a href="#">Car Care &
+                                Maintenance</a>
                         </li>
-                        <li class="bg-[#FEF3E8] text-[#FF8300] p-3 font-medium md:text-base text-sm"> Industry Insights
+                        <li class="bg-[#FEF3E8] text-[#FF8300] p-3 font-medium md:text-base text-sm">
+                            <a href="#">Repairs & Services</a>
+                        </li>
+                        <li class="bg-[#FEF3E8] text-[#FF8300] p-3 font-medium md:text-base text-sm">
+                            <a href="#">Industry Insights</a>
                         </li>
                     </ul>
-                    <a href="#" aria-label="" class="absolute inset-0"></a>
+
                 </div>
             </div>
             <div class="w-full flex justify-center items-center">
