--- a/index.html
+++ b/index.html
@@ -2798,26 +2798,28 @@
                                 <div class="flex md:flex-row flex-col md:gap-28 gap-y-6">
                                     <div>
                                         <h3 class="font-medium md:text-base text-sm mb-2">Station Hours </h3>
-                                        <div class="lg:text-xl text-base ">
+                                        <div class="lg:text-xl text-base flex flex-col gap-y-1">
                                             <span class="block md:font-bold font-semibold">8 AM to 8 PM </span>
                                             <span class="block md:font-bold font-semibold">Monday to Saturday</span>
-                                            <span class="md:hidden block">Open: 3rd & 4th Sunday<br></span>
-                                            <span class="md:hidden block">Closed: 1st & 2nd Sunday</span>
+                                            <span class="block">Open: 3rd & 4th Sunday<br></span>
+                                            <span class="block">Closed: 1st & 2nd Sunday</span>
                                         </div>
                                     </div>
                                     <div>
                                         <h3 class="font-medium lg:text-base text-sm mb-2">Call Center</h3>
-                                        <div class="lg:text-xl text-base">
+                                        <div class="lg:text-xl text-base flex flex-col gap-y-1">
                                             <span class="block md:font-bold font-semibold">6 AM to 11 PM</span>
                                             <span class="block md:font-bold font-semibold">Monday to Sunday</span>
                                         </div>
                                     </div>
                                 </div>
 
-                                <div class="mt-3 flex flex-col gap-1 2xl:text-xl lg:text-xl text-base font-bold">
+                                <div
+                                    class="mt-3 flex md:flex-row flex-col gap-1 2xl:text-xl lg:text-xl text-base font-bold">
                                     <a href="#">+91 86686 92000 </a>
+                                    <span class="md:inline hidden">|</span>
                                     <a href="mailto:customercare.pe@petromin.in"
-                                        class="2xl:text-xl lg:text-xl text-sm underline hover:text-gray-200">
+                                        class="2xl:text-xl lg:text-xl text-sm underline hover:text-gray-200 md:pl-1">
                                         customercare.pe@petromin.in
                                     </a>
                                 </div>
